Update Vue3 template

--- a/Contact3213/package.json
+++ b/Contact3213/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contact3213",
+  "name": "vite_crud",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "firebase": "^10.10.0",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
