--- a/Contact3213/package.json
+++ b/Contact3213/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.10.0",
+    "fomantic-ui-css": "^2.9.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "vue": "^3.4.21",
+    "vue-fomantic-ui": "^0.24.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
