--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,14 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "mongoose": "^6.2.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.12.8",
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "dev" : "nodemon server.js"
+    "dev": "nodemon server.js"
   }
 }
