--- a/Contact3213/package.json
+++ b/Contact3213/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.8"
-  }
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.14.2"
+  }  
 }
